force-app/main/default/objects/Attachments_New__c/Attachments_New__c.object-meta.xml
<CustomObject>
    <label>Attachments +</label>
    <nameField>
        <displayFormat>A+-{000000}</displayFormat>
        <label>Attachments Plus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments +</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>