force-app/main/default/objects/Attachments_New__c/fields/APlus_Json__c.field-meta.xml
<CustomField>
    <fullName>APlus_Json__c</fullName>
    <label>APlus Json</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>