force-app/main/default/objects/Attachments_New__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Attachments +</relationshipLabel>
    <relationshipName>CaseAttachments</relationshipName>
    <type>Lookup</type>
</CustomField>