force-app/main/default/objects/Attachments_New__c/fields/Primary_Document__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To signify the main document submitted for PAGA cases</description>
    <label>Primary Document</label>
    <type>Checkbox</type>
</CustomField>