force-app/main/default/objects/Attachments_New__c/fields/Release_to_Public__c.field-meta.xml
<CustomField>
    <fullName>Release_to_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release to Public</label>
    <type>Checkbox</type>
</CustomField>