force-app/main/default/objects/Attachments_New__c/fields/Share_Point_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Share_Point_Item_Id__c</fullName>
    <label>Share Point Item Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>