force-app/main/default/objects/Attachments_New__c/fields/Sharepoint_File_Status__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_File_Status__c</fullName>
    <label>Sharepoint File Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>