force-app/main/default/objects/Attachments_New__c/fields/Sharepoint_File_Upload_Error__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_File_Upload_Error__c</fullName>
    <label>Sharepoint File Upload Error</label>
    <length>100</length>
    <type>Text</type>
</CustomField>