force-app/main/default/objects/Attachments_New__c/fields/Upload_Date_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Field_Name__c</fullName>
    <description>Field to store the upload date field name of attachment bins for automatic date stamp</description>
    <label>Upload Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>