force-app/main/default/objects/Attachments_New__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <label>Visible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>